Adapt project name

--- a/AspNetSample.MVC5/Web.config
+++ b/AspNetSample.MVC5/Web.config
@@ -68,8 +68,8 @@
   </system.codedom>
   <entityFramework>
     <contexts>
-      <context type="AspNetSample.MVC5.Models.MeetingMinutesDB, AspNetSample.MVC5">
-        <databaseInitializer type="AspNetSample.MVC5.Models.MeetingToolInitlizer, AspNetSample.MVC5" />
+      <context type="AspNetSample.MeetingMinutesSystem.Models.MeetingMinutesDB, AspNetSample.MeetingMinutesSystem">
+        <databaseInitializer type="AspNetSample.MeetingMinutesSystem.Models.MeetingToolInitlizer, AspNetSample.MeetingMinutesSystem" />
       </context>
     </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
