--- a/MeetingMinutesSystem/Web.config
+++ b/MeetingMinutesSystem/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,7 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MeetingMinutesDB" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=MeetingMinutesDB; Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\MeetingMinutesSystemDataBase.mdf;Initial Catalog=MeetingMinutesSystemDataBase;Integrated Security=True"
+     providerName="System.Data.SqlClient" />
+    <add name="MeetingMinutesSystemDataBase" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=MeetingMinutesSystemDataBase;Trusted_Connection=no; Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -66,15 +68,4 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <entityFramework>
-    <contexts>
-      <context type="AspNetSample.MeetingMinutesSystem.Models.MeetingMinutesDB, AspNetSample.MeetingMinutesSystem">
-        <databaseInitializer type="AspNetSample.MeetingMinutesSystem.Models.MeetingToolInitlizer, AspNetSample.MeetingMinutesSystem" />
-      </context>
-    </contexts>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-  </entityFramework>
 </configuration>
