--- a/MeetingMinutesSystem/MeetingMinutesSystem.csproj
+++ b/MeetingMinutesSystem/MeetingMinutesSystem.csproj
@@ -163,6 +163,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="requirements and feedback.txt" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config" />
