--- a/MeetingMinutesSystem/Web.config
+++ b/MeetingMinutesSystem/Web.config
@@ -23,6 +23,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <roleManager enabled="true" cacheRolesInCookie="true" ></roleManager>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
